@startuml
hide circles

!includesub Products.puml!Pricer
!includesub Products.puml!QuoteProvider
!includesub Products.puml!PricerFactory


!startsub Simulation
package StructuredProductPricer
{
    package Simulation
    {
        abstract class Simulation
        {
            {abstract} +getSimulatedValue(variableName: String, simulationDate: Date, simulationIndex: Integer): Real
        }
    }
}
!endsub


!startsub GeometricBrownianMotion
package StructuredProductPricer
{
    package Simulation
    {
        class GeometricBrownianMotion
        {
            {static} +create(variableNames: String[1..*], observationDate: Date, simulationDates: Date[1..*], initialValues[1..*], drift: DiscountCurve[1..*], covariance: CovarianceTermStructure)
            +getSimulatedValue(variableName: String, simulationDate: Date, simulationIndex: Integer): Real
        }
    }
}
!endsub


!startsub SimulatedQuoteProvider
package StructuredProductPricer
{
    package Simulation
    {
        class SimulatedQuoteProvider
        {
            -simulationIndex
            +getQuotes(ticker: String, observationDates: Date[1..*]{ordered}): Real[1..*]{ordered}
        }
    }
}
!endsub


!startsub CovarianceTermStructure
package StructuredProductPricer
{
    package Simulation
    {
        abstract class CovarianceTermStructure
        {
            {abstract} +getObservationDate(): Date
            {abstract} +getTotalCovariance(forecastDate: Date): Matrix
        }
    }
!endsub


!startsub DiscountCurve
package StructuredProductPricer
{
    package Simulation
    {
        abstract class DiscountCurve
        {
            {abstract} +getValuationDate(): Date
            {abstract} +getDiscountFactor(paymentDate: Date): Real
        }
    }
!endsub


!startsub FlatHistoricalCovarianceForecast
package StructuredProductPricer
{
    package Simulation
    {
        class FlatHistoricalCovarianceForecast
        {
            -observationDate: Date
            -historicalWindow: Date[2..*]
            {static} +create(underlyings: String[1..*]{ordered}, observationDate: Date, historicalWindowSize: Real, market: QuoteProvider)
            +getObservationDate(): Date
            +getTotalCovariance(forecastDate: Date): Matrix
        }
    }
}
!endsub


!startsub GarchCovarianceForecast
package StructuredProductPricer
{
    package Simulation
    {
        class GarchCovarianceForecast
        {
            -observationDate: Date
            -correlation: Matrix
            -alpha: Real[1..*]
            -beta: Real[1..*]
            -longRunVariance: Real[1..*]
            {static} +create(underlyings: String[1..*]{ordered}, observationDate: Date, historicalWindowSize: Real, market: QuoteProvider)
            +getObservationDate(): Date
            +getTotalCovariance(forecastDate: Date): Matrix
            -getLikelihood(): Real
            -calibrate()
        }
    }
}
!endsub


!startsub IndexDiscountCurve
package StructuredProductPricer
{
    package Simulation
    {
        class IndexDiscountCurve
        {
            -valuationDate: Date
            -rates: Real[1..*]
            -durations: Real[1..*]
            {static} +create(valuationDate: Date, tenors: String[1..*]{ordered}, tickers: String[1..*]{ordered}, market: QuoteProvider)
            +getValuationDate(): Date
            +getDiscountFactor(paymentDate: Date): Real
        }
    }
!endsub


!startsub SimulationPricer
package StructuredProductPricer
{
    package Simulation
    {
        class SimulationPricer
        {
            -underlyings: String[1..*]
            -valuationDate: Date
            {static} +create(underlyings: String[1..*], valuationDate: Date, discountCurve: DiscountCurve[1..*], underlyingCovarianceForecast: CovarianceTermStructure)
            +getValuationDate(): Date
            +getDiscountFactor(paymentDate: Date): Real
            +getCallOptionBasePrice(underlying: String, strike: Real, maturityDate: Date): Real
            +getCashFlowBasePrice(pricedElement: CashFlow): Real
        }
    }
}
!endsub


!startsub SimulationPricerFactory
package StructuredProductPricer
{
    package Simulation
    {
        class SimulationPricerFactory
        {
            {static} +createPricer(underlyings: String[1..*], market: QuoteProvider): Pricer
        }
    }
}
!endsub


GeometricBrownianMotion -up-|> Simulation
GeometricBrownianMotion --> "drift 1..*" DiscountCurve
GeometricBrownianMotion --> "covariance" CovarianceTermStructure
IndexDiscountCurve -up-|> DiscountCurve
FlatHistoricalCovarianceForecast -up--|> CovarianceTermStructure
GarchCovarianceForecast -up--|> CovarianceTermStructure
SimulatedQuoteProvider -up--|> QuoteProvider
SimulatedQuoteProvider -up--> "originalQuoteProvider" QuoteProvider
SimulatedQuoteProvider --> "amendment" Simulation
SimulationPricer -up--|> Pricer
SimulationPricerFactory -up--|> PricerFactory
SimulationPricer -up--> "originalMarket" QuoteProvider
SimulationPricer --> "discountCurve" DiscountCurve
SimulationPricer --> "underlyingCovarianceForecast" CovarianceTermStructure
SimulationPricer --> "implementation" Simulation
SimulationPricerFactory ..> SimulationPricer: create
SimulationPricerFactory ..> IndexDiscountCurve: create
SimulationPricerFactory ..> FlatHistoricalCovarianceForecast: create
SimulationPricerFactory ..> GarchCovarianceForecast: create
SimulationPricer ..> SimulatedQuoteProvider: create


@enduml

